fix(help): clean up wrapping for help text

--- a/scss/os/_duration.scss
+++ b/scss/os/_duration.scss
@@ -2,4 +2,8 @@
   .invalid-feedback span {
     line-height: 2.5em;
   }
+
+  .row {
+    flex-wrap: nowrap;
+  }
 }
